# agent-ci-failure-packet

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: failed-receipt.json
src/agent_ci_failure_packet/: __init__.py  cli.py
tests/: test_cli.py
