[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ci-failure-packet"
version = "0.1.0"
description = "Turn CI logs into compact failure packets for coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Manuel Sampedro" }
]
keywords = ["ai agents", "ci", "codex", "developer tools", "debugging"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance"
]

[project.scripts]
agent-ci-failure-packet = "agent_ci_failure_packet.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

